# project1.remote-sensing-classification

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MIL_ARCHITECTURE.md  OPTIMIZATION_PROPOSAL.md  PROJECT1_AUDIT_REPORT.md  PROJECT1_COMPREHENSIVE_GUIDE.md  PROJECT_PROGRESS.md  README.md  README_EN.md  TEST_LOG.md  app.py  benchmark_results.json  build.py  build_desktop.py  build_exe.py  config.yaml  data_preprocessing_framework.md  demo_app.py  demo_requirements.txt  desktop_app.py  docker-compose.yml  gee_setup_guide.md  install.py  launcher.py  model_architecture.md  predict.py  pyproject.toml  requirements.txt  requirements_hf.txt  start.py  styles.css  test_model_bug.py
ablation_output/: dem_ablation_results.json  v6_experiments_results.json
api/: api_architecture.md  main.py  monitoring.py
configs/: __init__.py  v6_production.yaml
data/: README_DATA.md  mil_dataset.py  preprocess.py  preprocess_combined.py  preprocess_enhanced.py  preprocess_pipeline.py  preprocess_pipeline_full.py  pseudo_labels.py  supplement_modules.py
docs/: API_DOCUMENTATION.md  DEM_ABLATION_REPORT.md  V6_EXPERIMENTS_REPORT.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
models/: __init__.py  _base.py  _base_constants.py  dem_encoder.py  fusion_net.py  fusion_net_v4.py  fusion_net_v5.py  fusion_net_v5_edl.py  fusion_net_v5pro.py  fusion_net_v6.py  geometric_invariants.py  grassmann_ot.py  heads.py  mil_module.py  multi_task_heads.py  siren_dem_encoder.py  siren_tta.py  synergy.py  temporal.py  temporal_lite.py  topological_evidence.py  tsvit.py  tta_safety_monitor.py  unet_transformer.py
scripts/: benchmark_dataloader.py  demo_v6.py  diagnose_model.py  export_dlpk_complete.py  export_edl.py  export_emd_simple.py  (+34 more)
(+99 files in other folders)
